Update to .net8

--- a/RateACourse.Web/appsettings.json
+++ b/RateACourse.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CourseRateDb": "Server=.\\SQLEXPRESS;Database=CourseRateDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "CourseRateDb": "Server=.\\SQLEXPRESS;Database=CourseRateDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
